// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DayDropdown on day select 1`] = `
<body>
  <div>
    <div
      class="react-calendar day-dropdown"
    >
      <div
        class="react-calendar__viewContainer"
      >
        <div
          class="react-calendar__month-view "
        >
          <div
            style="display: flex; align-items: flex-end;"
          >
            <div
              style="flex-grow: 1; width: 100%;"
            >
              <div
                class="react-calendar__month-view__weekdays"
                style="display: flex; flex-wrap: no-wrap;"
              >
                <div
                  class="react-calendar__month-view__weekdays__weekday"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                >
                  <abbr
                    aria-label="Monday"
                    title="Monday"
                  >
                    M
                  </abbr>
                </div>
                <div
                  class="react-calendar__month-view__weekdays__weekday"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                >
                  <abbr
                    aria-label="Tuesday"
                    title="Tuesday"
                  >
                    T
                  </abbr>
                </div>
                <div
                  class="react-calendar__month-view__weekdays__weekday"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                >
                  <abbr
                    aria-label="Wednesday"
                    title="Wednesday"
                  >
                    W
                  </abbr>
                </div>
                <div
                  class="react-calendar__month-view__weekdays__weekday"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                >
                  <abbr
                    aria-label="Thursday"
                    title="Thursday"
                  >
                    T
                  </abbr>
                </div>
                <div
                  class="react-calendar__month-view__weekdays__weekday"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                >
                  <abbr
                    aria-label="Friday"
                    title="Friday"
                  >
                    F
                  </abbr>
                </div>
                <div
                  class="react-calendar__month-view__weekdays__weekday"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                >
                  <abbr
                    aria-label="Saturday"
                    title="Saturday"
                  >
                    S
                  </abbr>
                </div>
                <div
                  class="react-calendar__month-view__weekdays__weekday"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                >
                  <abbr
                    aria-label="Sunday"
                    title="Sunday"
                  >
                    S
                  </abbr>
                </div>
              </div>
              <div
                class="react-calendar__month-view__days"
                style="display: flex; flex-wrap: wrap;"
              >
                <button
                  class="react-calendar__tile react-calendar__tile--active react-calendar__tile--range react-calendar__tile--rangeStart react-calendar__tile--rangeEnd react-calendar__tile--rangeBothEnds react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden; margin-left: 85.71428571428571%;"
                  type="button"
                >
                  <abbr
                    aria-label="November 1, 2020"
                  >
                    1
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 2, 2020"
                  >
                    2
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 3, 2020"
                  >
                    3
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 4, 2020"
                  >
                    4
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 5, 2020"
                  >
                    5
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 6, 2020"
                  >
                    6
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 7, 2020"
                  >
                    7
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__tile--now react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 8, 2020"
                  >
                    8
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 9, 2020"
                  >
                    9
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 10, 2020"
                  >
                    10
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 11, 2020"
                  >
                    11
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 12, 2020"
                  >
                    12
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 13, 2020"
                  >
                    13
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 14, 2020"
                  >
                    14
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 15, 2020"
                  >
                    15
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 16, 2020"
                  >
                    16
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 17, 2020"
                  >
                    17
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 18, 2020"
                  >
                    18
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 19, 2020"
                  >
                    19
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 20, 2020"
                  >
                    20
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 21, 2020"
                  >
                    21
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 22, 2020"
                  >
                    22
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 23, 2020"
                  >
                    23
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 24, 2020"
                  >
                    24
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 25, 2020"
                  >
                    25
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 26, 2020"
                  >
                    26
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 27, 2020"
                  >
                    27
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 28, 2020"
                  >
                    28
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 29, 2020"
                  >
                    29
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 30, 2020"
                  >
                    30
                  </abbr>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`DayDropdown to match snapshot 1`] = `
<body>
  <div>
    <div
      class="react-calendar day-dropdown"
    >
      <div
        class="react-calendar__viewContainer"
      >
        <div
          class="react-calendar__month-view "
        >
          <div
            style="display: flex; align-items: flex-end;"
          >
            <div
              style="flex-grow: 1; width: 100%;"
            >
              <div
                class="react-calendar__month-view__weekdays"
                style="display: flex; flex-wrap: no-wrap;"
              >
                <div
                  class="react-calendar__month-view__weekdays__weekday"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                >
                  <abbr
                    aria-label="Monday"
                    title="Monday"
                  >
                    M
                  </abbr>
                </div>
                <div
                  class="react-calendar__month-view__weekdays__weekday"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                >
                  <abbr
                    aria-label="Tuesday"
                    title="Tuesday"
                  >
                    T
                  </abbr>
                </div>
                <div
                  class="react-calendar__month-view__weekdays__weekday"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                >
                  <abbr
                    aria-label="Wednesday"
                    title="Wednesday"
                  >
                    W
                  </abbr>
                </div>
                <div
                  class="react-calendar__month-view__weekdays__weekday"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                >
                  <abbr
                    aria-label="Thursday"
                    title="Thursday"
                  >
                    T
                  </abbr>
                </div>
                <div
                  class="react-calendar__month-view__weekdays__weekday"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                >
                  <abbr
                    aria-label="Friday"
                    title="Friday"
                  >
                    F
                  </abbr>
                </div>
                <div
                  class="react-calendar__month-view__weekdays__weekday"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                >
                  <abbr
                    aria-label="Saturday"
                    title="Saturday"
                  >
                    S
                  </abbr>
                </div>
                <div
                  class="react-calendar__month-view__weekdays__weekday"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                >
                  <abbr
                    aria-label="Sunday"
                    title="Sunday"
                  >
                    S
                  </abbr>
                </div>
              </div>
              <div
                class="react-calendar__month-view__days"
                style="display: flex; flex-wrap: wrap;"
              >
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden; margin-left: 85.71428571428571%;"
                  type="button"
                >
                  <abbr
                    aria-label="November 1, 2020"
                  >
                    1
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 2, 2020"
                  >
                    2
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 3, 2020"
                  >
                    3
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 4, 2020"
                  >
                    4
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 5, 2020"
                  >
                    5
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 6, 2020"
                  >
                    6
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 7, 2020"
                  >
                    7
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__tile--now react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 8, 2020"
                  >
                    8
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 9, 2020"
                  >
                    9
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 10, 2020"
                  >
                    10
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 11, 2020"
                  >
                    11
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 12, 2020"
                  >
                    12
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 13, 2020"
                  >
                    13
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 14, 2020"
                  >
                    14
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 15, 2020"
                  >
                    15
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 16, 2020"
                  >
                    16
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 17, 2020"
                  >
                    17
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 18, 2020"
                  >
                    18
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 19, 2020"
                  >
                    19
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 20, 2020"
                  >
                    20
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 21, 2020"
                  >
                    21
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 22, 2020"
                  >
                    22
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 23, 2020"
                  >
                    23
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 24, 2020"
                  >
                    24
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 25, 2020"
                  >
                    25
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 26, 2020"
                  >
                    26
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 27, 2020"
                  >
                    27
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 28, 2020"
                  >
                    28
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 29, 2020"
                  >
                    29
                  </abbr>
                </button>
                <button
                  class="react-calendar__tile react-calendar__month-view__days__day"
                  style="flex-basis: 14.285714285714286%; max-width: 14.285714285714286%; overflow: hidden;"
                  type="button"
                >
                  <abbr
                    aria-label="November 30, 2020"
                  >
                    30
                  </abbr>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
